Create sql request in methods for Analytics